@@ -33,6 +33,6 @@ Name: Pure
 Description: Pure runtime library
 Version: @PACKAGE_VERSION@
 URL: http://purelang.bitbucket.org
-Libs: -L${libdir} -lpure
+Libs: -L${libdir} -lpure @PCRE_LIBS@
 Libs.private: ${extralibs}
 Cflags: -I${includedir}
